# Kindle

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  TEST_INFO.md  alembic.ini  create_admin.py  db_container.ps1  generate-ssl.sh  generate_secret_key.py  migrate.ps1  nginx.conf  prometheus.yml  promtail-config.yml  pyproject.toml  setup.cfg  test_db.ps1
C4/: schema.dbml  workspace.dsl  workspace.json
C4/.structurizr/index/: _b.cfe  _b.cfs  _b.si  segments_c
docker/: Dockerfile.app  docker-compose.app.yml  docker-compose.db.yml  docker-compose.test-db.yml
grafana/: dashboards.yml  datasources.yml
grafana/dashboards/: dashboard.json
migrations/: env.py
migrations/versions/: 6d1aa9cf36b6_auto_revision.py  7ad54cb4a363_add_hash_password_to_users_and_create_.py  98200438bb25_auto_revision.py  9e13699b3dd1_fix_bio.py  b7455970e754_auto_revision.py  e743a06a7ea7_create_tables.py  f5ea7e138221_init_db.py
src/: config.py  database.py  main.py  models.py
src/auth/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  services.py  utils.py
src/user_profile/: dao.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
tests/: config.py  conftest.py
tests/test_auth/: test_auth_routes.py  test_dependencies.py  test_login_revoke_flows.py  test_logout_and_revoke_edges.py  test_refresh_flows.py  test_register_login_errors.py  test_router_cookies.py
tests/test_user_profile/: test_language.py  test_moderation_routes.py  test_photo.py  test_schemas_validation.py  test_social_media.py  test_user.py  test_user_delete.py  test_user_delete_roles.py  test_user_edge_cases.py  test_user_get.py  test_user_language.py  test_user_patch.py  test_user_photo.py  test_user_post.py  test_user_social_links.py  test_utils_permissions.py
